syntax = "proto3";

option go_package = "pb/";

message CheckTokenRequest {
  string token = 1;
  string client_ip = 2;
}

message CheckTokenResponse {
  string id = 1;
  string name = 2;
	string comment = 3;
	string token = 4;
}

service UserService {
  rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse) {}
}